--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Fonts -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=di, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
@@ -13,15 +12,83 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Hugo English Club</title>
-  </head>
-  <body>
-    <div class="bg-img">
+    <!-- CSS file -->
+    <link rel="stylesheet" href="./index.css">
+    <!-- Responsive -->
+    <link rel="stylesheet" href="./responsive.css">
+    <title>Document</title>
+</head>
+<body>
+   <div class="teams-introduce">
       <div class="container">
-        <div class="row">
-          <div class="col"></div>
-        </div>
+         <div class="row text-center">
+            <p class="fw-bold teams-title">TEAMS IN HUGO</p>
+         </div>
+         <div class="teams d-flex">
+            <div class="wheel-icon">
+               <div class="circle">
+                  <div class="team-icon" style="--index: 1" data-index="1">
+                        <img src="./imgs/Ellipse 5.png" alt="" class="teams-icon-img" style="--index: 1">
+                  </div>
+                  <div class="team-icon" style="--index: 2" data-index="2">
+                        <img src="./imgs/Ellipse 6 (1).png" alt="" class="teams-icon-img" style="--index: 2">
+                  </div>
+                  <div class="team-icon" style="--index: 3" data-index="3">
+                        <img src="./imgs/Ellipse 7 (1).png" alt="" class="teams-icon-img" style="--index: 3">
+                  </div>
+                  <div class="team-icon" style="--index: 4" data-index="4">
+                        <img src="./imgs/Ellipse 8.png" alt="" class="teams-icon-img" style="--index: 4">
+                  </div>
+               </div>
+            </div>
+            <div class="row btn-rotate justify-content-center align-content-center">
+                  <button class="btn-rotate-up"><i class="fa-solid fa-caret-up"></i></button>
+                  <button class="btn-rotate-down"><i class="fa-solid fa-caret-down"></i></button>
+            </div>
+            <div class="row teams-introduce-text">
+               <div class="p-4 team-all" style="--index: 1" data-index="1">
+                  <div class="team-text">
+                     <span >POWER RANGERS</span>
+                     <h1 class="my-3">JUSTICE FOR ALL</h1>
+                     <p class="mb-4">“We are different, we don’t have to follow anyone and no one can follow us. But when we are in Power Rangers, together, we can know more things, we can be stronger and the most important is we can be loved more by each other.”
+                     </p>
+                     <a class="mt-5" href="">READ MORE</a>
+                  </div>
+               </div>
+               <div class="p-4 team-all"style="--index: 2" data-index="2">
+                  <div class="team-text">
+                     <span >HEROES COMPANY</span>
+                     <h1 class="my-3">STRONGER TOGETHER</h1>
+                     <p class="mb-4">“We are different, we don’t have to follow anyone and no one can follow us. But when we are in Power Rangers, together, we can know more things, we can be stronger and the most important is we can be loved more by each other.”
+                     </p>
+                     <a class="mt-5" href="">READ MORE</a>
+                  </div>
+               </div>
+               <div class="p-4 team-all" style="--index: 3" data-index="3">
+                  <div class="team-text">
+                     <span >BANANA</span>
+                     <h1 class="my-3">WE COME IN BUNCH</h1>
+                     <p class="mb-4">“We are different, we don’t have to follow anyone and no one can follow us. But when we are in Power Rangers, together, we can know more things, we can be stronger and the most important is we can be loved more by each other.”
+                     </p>
+                     <a class="mt-5" href="">READ MORE</a>
+                  </div>
+               </div>
+               <div class="p-4 team-all" style="--index: 4" data-index="4">
+                  <div class="team-text">
+                     <span >NIFFLER</span>
+                     <h1 class="my-3">FRIENDS FOREVER</h1>
+                     <p class="mb-4">“We are different, we don’t have to follow anyone and no one can follow us. But when we are in Power Rangers, together, we can know more things, we can be stronger and the most important is we can be loved more by each other.”
+                     </p>
+                     <a class="mt-5" href="">READ MORE</a>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
-    </div>
-  </body>
+   </div>
+      
+
+     
+<script type="text/javascript" src="./index.js"></script>
+</body>
 </html>
