--- a/index.html
+++ b/index.html
@@ -15,13 +15,104 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Hugo English Club</title>
   </head>
-  <body>
-    <div class="bg-img">
-      <div class="container">
-        <div class="row">
-          <div class="col"></div>
-        </div>
+  <div class="main">
+    <!-- activities start -->
+    <link rel="stylesheet" href="activities.css">
+    <div class="activities">
+      <div class="title">activities</div>
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="3000000">
+              <div class="slides-wrapper">
+                <div class="activity">
+                  <img src="/imgs/pic-1.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-event">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-2.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-meeting">meeting</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-3.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-event">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>    
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <div class="slides-wrapper">
+                <div class="activity">
+                  <img src="/imgs/pic-4.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-event">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-5.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-event">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-6.jpg" alt="picture1" class="image">
+                  <div class="activity-tag activity-tag-event">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>    
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="3000">
+              <div class="slides-wrapper">
+                <div class="activity">
+                  <img src="/imgs/pic-7.jpg" alt="picture1" class="image">
+                  <div class="activity-tag">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-8.jpg" alt="picture1" class="image">
+                  <div class="activity-tag">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>
+                <div class="activity">
+                  <img src="/imgs/pic-9.jpg" alt="picture1" class="image">
+                  <div class="activity-tag">event</div>
+                  <div class="activity-title">hugo farewell</div>
+                  <div class="activity-date">sep 14 2002</div>
+                </div>    
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev" >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
       </div>
+      <div class="container mt-3">
+        <div class="showmore">
+          <a href="https://www.google.com" class="button-link">
+            <span class="content">see more</span>
+          </a>
+        </div>
+        
+      </div>
+
+
+  
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </div>
+    <!-- activities end -->
+  </div>
   </body>
 </html>
