--- a/index.html
+++ b/index.html
@@ -22,6 +22,36 @@
 </head>
 <div class="main">
 
+  <!-- Club-introduction start-->
+  <link rel="stylesheet" href="./club_introduction.css">
+  <div class="club-introduction row">
+    <div class="left-content col-lg-6">
+      <div class="first-paragraph">
+        what is 
+      </div>
+      <div class="second-paragraph">
+        hugo english club
+      </div>
+      <div class="description mt-3">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores nulla cum asperiores eligendi molestiae consectetur tenetur repudiandae accusamus architecto maxime amet earum ut ratione repellendus voluptatem veniam recusandae impedit nisi laudantium sunt, similique sapiente possimus dolor odio. Enim, blanditiis laboriosam.
+      </div>
+      <div class="container mt-3">
+        <div class="read-more">
+          <a href="https://www.google.com" class="button-link">
+            <span class="content">read more</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="right-content col-lg-6">
+      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Y9V3bgXbzi4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+  <!-- Club-introduction end-->
+  
+
+
+
   <!-- Teams-introduce start -->
   <div class="teams-introduce">
     <div class="container">
@@ -110,13 +140,13 @@
   <script src="./teams_introduce.js"></script>
   <!-- Teams-introduce end -->
 
-  <!-- activities start -->
+  <!-- Activities start -->
   <link rel="stylesheet" href="activities.css">
   <div class="activities">
     <div class="title">activities</div>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="3000000">
+        <div class="carousel-item active" data-bs-interval="3000">
           <div class="slides-wrapper">
             <div class="activity">
               <img src="/imgs/pic-1.jpg" alt="picture1" class="image">
@@ -195,12 +225,11 @@
       </button>
     </div>
     <div class="container mt-3">
-      <div class="showmore">
+      <div class="show-more">
         <a href="https://www.google.com" class="button-link">
           <span class="content">see more</span>
         </a>
       </div>
-
     </div>
 
 
@@ -210,7 +239,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"></script>
   </div>
-  <!-- activities end -->
+  <!-- Activities end -->
 
   
 </div>
