finish register, some changes in activities, club_introduction

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
 <body>
   <div class="container">
-
     <!-- Club-introduction start-->
     <link rel="stylesheet" href="./club_introduction.css">
     <div class="club-introduction row">
@@ -36,17 +35,14 @@
           hugo english club
         </div>
         <div class="description mt-3">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores nulla cum asperiores eligendi molestiae
-          consectetur tenetur repudiandae accusamus architecto maxime amet earum ut ratione repellendus voluptatem
-          veniam recusandae impedit nisi laudantium sunt, similique sapiente possimus dolor odio. Enim, blanditiis
-          laboriosam.
+          Hugo English Club is an official club directly under the Student Union of the University of Science and
+          Technology - the University of Danang. It was established on March 15, 2008, by the University of Science and
+          Technology students. Our vision is to build a dynamic environment for all students, school-level students, and
+          working people in Da Nang city who want to practice English, enhance personal skills, and experience new
+          activities.
         </div>
-        <div class="container mt-3">
-          <div class="read-more">
-            <a href="https://www.google.com" class="button-link">
-              <span class="content">read more</span>
-            </a>
-          </div>
+        <div class="club_read_more mt-3">
+          <a href="https://www.google.com">READ MORE</a>
         </div>
       </div>
       <div class="right-content col-lg-6">
@@ -160,7 +156,7 @@
       <div class="title">activities</div>
       <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="3000000">
+          <div class="carousel-item active" data-bs-interval="3000">
             <div class="slides-wrapper">
               <div class="activity">
                 <img src="/imgs/pic-1.jpg" alt="picture1" class="image" />
@@ -238,21 +234,44 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="container mt-3">
-        <div class="row justify-content-center">
-          <div class="col-auto">
-            <a href="https://www.google.com" class="button-link">
-              <span class="content">see more</span>
-            </a>
-          </div>
-        </div>
+      <div class="activities_read_more mt-5">
+        <a href="https://www.google.com">SEE MORE</a>
       </div>
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
     </div>
     <!-- activities end -->
+
+
+    <!-- Register start -->
+    <link rel="stylesheet" href="./register.css">
+    <div class="register mt-5">
+        <!-- <img src="./imgs/register_bg2.JPG" alt="background" class="register_background_opacity" /> -->
+        <!-- <div class="register_content"> -->
+          <div class="register_title">
+            BECOME AN OFFICIAL MEMBER OF
+          </div>
+          <div class="register_title">
+            HUGO ENGLISH CLUB
+          </div>
+
+          <div class="register_description mt-4">
+            <div class="register_description_importance_text mb-4">
+              Hugo brings English more familiar than ever before, whoever you are!
+            </div>
+            <p class="">Do you want to immerse yourself in an environment where people practice English together?</p>
+            <p>Are you eager to make active and talented friends in Danang?</p>
+            <p>More than an English Club, let’s join us to know what's behind it!</p>
+          </div>
+          <div class="register_join_us mt-5">
+            <a href="https://www.google.com">JOIN US RIGHT NOW</a>
+          </div>
+        </div>
+    </div>
+    <!-- Register end -->
   </div>
 
   <!-- Footer start -->
