team_meeting,team_camping,extra_activities,sharing

--- a/extra_activities/extra_activities.html
+++ b/extra_activities/extra_activities.html
@@ -110,23 +110,23 @@
           <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
           <li class="breadcrumb-item"><a href="#">Teams</a></li>
           <li class="breadcrumb-item"><a href="#">Heroes Company</a></li>
-          <li class="breadcrumb-item  active current_page" aria-current="page"><span>Team Meeting</span></li>
+          <li class="breadcrumb-item  active current_page" aria-current="page"><span>Extra Activities</span></li>
         </ol>
     </nav>
     <link rel="stylesheet" href="../breadcrumb/breadcrumb.css">
 
-    <!-- Team meeting start -->
-    <div class="container team_meeting overflow-hidden">
-        <div class="team_meeting_title">
-            TEAM MEETING
+    <!-- Extra_activities start -->
+    <div class="container extra_activities overflow-hidden">
+        <div class="extra_activities_title">
+            EXTRA ACTIVITIES
         </div>
 
-        <div class="team_meeting_content row mt-5 gx-5">
+        <div class="extra_activities_content row mt-5 gx-5">
             <!-- Left content  -->
             <div class="left-content col">
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -145,9 +145,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -166,9 +166,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -187,9 +187,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -210,9 +210,9 @@
             </div>
             <!-- Right content -->
             <div class="right-content col">
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -231,9 +231,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -252,9 +252,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -273,9 +273,9 @@
                     </div>
                 </div>
 
-                <div class="team_meeting_post row">
+                <div class="extra_activities_post row">
                     <div class="col-5 post_image_part">
-                        <img src="../imgs/team_meeting/IMG_3426.JPG" alt="" class="post_image">
+                        <img src="../imgs/extra_activities/IMG_3426.JPG" alt="" class="post_image">
                     </div>
                     <div class="col-7 post_content_part">
                         <div class="post_title">
@@ -298,12 +298,12 @@
 
         
     </div>
-    <div class="team_meeting_see_more d-flex justify-content-center">
+    <div class="extra_activities_see_more d-flex justify-content-center">
         <a class="" href="../index.html">SEE MORE</a>
     </div>
 
-    <link rel="stylesheet" href="../team_meeting/team_meeting.css">
-    <!-- Team meeting end  -->
+    <link rel="stylesheet" href="../extra_activities/extra_activities.css">
+    <!-- Team extra_activities end  -->
 
     <!-- Footer start -->
     <div class="footer text-white" id="footer">
