--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Hugo English Club</title>
+  <!-- Carousel -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
 </head>
-
 <body>
+  
   <!-- Header start -->
   <div class="header" id="header">
     <nav class="navbar navbar-expand-lg justify-content-between fixed-top bg-nav">
@@ -140,7 +144,7 @@
             activities.
           </div>
           <div class="club_read_more mt-4">
-            <a href="https://www.google.com">READ MORE</a>
+            <a href="#">READ MORE</a>
           </div>
         </div>
         <div class="right-content col-lg-6">
@@ -189,10 +193,8 @@
             </div>
             <div
               class="row btn-rotate col-lg-auto justify-content-center align-content-center d-none d-md-none d-lg-flex">
-              <button class="btn-rotate-up d-flex justify-content-center"><i
-                  class="fa-sharp fa-solid fa-caret-up"></i></button>
-              <button class="btn-rotate-down d-flex justify-content-center"><i
-                  class="fa-sharp fa-solid fa-caret-down"></i></button>
+              <button class="btn-rotate-up d-flex justify-content-center"><i class="fa-solid fa-caret-up"></i></button>
+              <button class="btn-rotate-down d-flex justify-content-center"><i class="fa-solid fa-caret-down"></i></button>
             </div>
           </div>
         </div>
@@ -263,99 +265,53 @@
   <!-- Teams-introduce end -->
 
   <!-- activities start -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="activities" id="activities">
     <div class="container">
-      <div class="activities-title">activities</div>
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="3000">
-            <div class="slides-wrapper">
-              <div class="activity">
-                <img src="/imgs/pic-1.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-event">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-2.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-meeting">meeting</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-3.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-event">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <div class="slides-wrapper">
-              <div class="activity">
-                <img src="/imgs/pic-4.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-event">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-5.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-event">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-6.jpg" alt="picture1" class="image" />
-                <div class="activity-tag activity-tag-event">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="3000">
-            <div class="slides-wrapper">
-              <div class="activity">
-                <img src="/imgs/pic-7.jpg" alt="picture1" class="image" />
-                <div class="activity-tag">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-8.jpg" alt="picture1" class="image" />
-                <div class="activity-tag">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-              <div class="activity">
-                <img src="/imgs/pic-9.jpg" alt="picture1" class="image" />
-                <div class="activity-tag">event</div>
-                <div class="activity-title">hugo farewell</div>
-                <div class="activity-date">sep 14 2002</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div class="activities-title">
+        activities
       </div>
-    </div>
-    <div class="see-more d-flex justify-content-center">
-      <a class="" href="">SEE MORE</a>
-    </div>
+      <div class="row mt-5">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+              <img src="./imgs/hugo-farewell.png" alt="">
+              <div class="item-activities-text text-white mx-4">
+                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-camping">camping</h6>
+                <h5>TOPIC: TRAVELING</h5>
+                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                <p class="item-activities-text-time">MAY 30, 2022</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./imgs/hugo-meeting.png" alt="">
+              <div class="item-activities-text text-white mx-4">
+                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-extra">extra activities</h6>
+                <h5>TOPIC: TRAVELING</h5>
+                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                <p class="item-activities-text-time">MAY 30, 2022</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./imgs//hugo-meeting.png" alt="">
+              <div class="item-activities-text text-white mx-4">
+                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-meeting">meeting</h6>
+                <h5>TOPIC: TRAVELING</h5>
+                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
+                <p class="item-activities-text-time">MAY 30, 2022</p>
+              </div>
+            </div>
+        </div>
+      <div class="see-more d-flex justify-content-center">
+        <a class="" href="">SEE MORE</a>
+      </div>
   </div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="activities.css" />
+</div>
+</div>
+<link rel="stylesheet" href="./activities.css" />
+  <script src="./Teams/teams.js"></script>
+  
   <!-- activities end -->
 
   <!-- Blogs start -->
@@ -663,10 +619,10 @@
                 <img src="../imgs/united-states.png" alt="" class="me-2">
                 <p class="mb-0">English</p>
               </li>
-              <li value="vi" class="d-flex align-items-center lang-option">
+              <!-- <li value="vi" class="d-flex align-items-center lang-option">
                 <img src="../imgs/vietnam.png" alt="" class="me-2">
                 <p class="mb-0">Vietnamese</p>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -677,8 +633,12 @@
     </div>
   </div>
   <link rel="stylesheet" href="../footer.css" />
-  <script src="../footer.js"></script>
+  <script src="./footer.js"></script>
   <!-- Footer end -->
+
+
+  
+
 </body>
 
 </html>
