--- a/index.html
+++ b/index.html
@@ -5,28 +5,43 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=di, initial-scale=1.0" />
+
   <!-- Font family -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
+
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Hugo English Club</title>
+
   <!-- Carousel -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Google API start -->
+  <script src="https://apis.google.com/js/api.js"></script>
+  <script src="https://accounts.google.com/gsi/client"></script>
+  <script src="/sheet-api/initialize.js"></script>
+  <!-- Google API end -->
 </head>
+
 <body>
-  
+
   <!-- Header start -->
   <div class="header" id="header">
     <nav class="navbar navbar-expand-lg justify-content-between fixed-top bg-nav">
@@ -194,7 +209,8 @@
             <div
               class="row btn-rotate col-lg-auto justify-content-center align-content-center d-none d-md-none d-lg-flex">
               <button class="btn-rotate-up d-flex justify-content-center"><i class="fa-solid fa-caret-up"></i></button>
-              <button class="btn-rotate-down d-flex justify-content-center"><i class="fa-solid fa-caret-down"></i></button>
+              <button class="btn-rotate-down d-flex justify-content-center"><i
+                  class="fa-solid fa-caret-down"></i></button>
             </div>
           </div>
         </div>
@@ -265,9 +281,16 @@
   <!-- Teams-introduce end -->
 
   <!-- activities start -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="activities" id="activities">
     <div class="container">
       <div class="activities-title">
@@ -275,43 +298,53 @@
       </div>
       <div class="row mt-5">
         <div class="owl-carousel owl-theme">
-            <div class="item">
-              <img src="./imgs/hugo-farewell.png" alt="">
-              <div class="item-activities-text text-white mx-4">
-                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-camping">camping</h6>
-                <h5>TOPIC: TRAVELING</h5>
-                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
-                <p class="item-activities-text-time">MAY 30, 2022</p>
-              </div>
+          <div class="item">
+            <img src="./imgs/hugo-farewell.png" alt="">
+            <div class="item-activities-text text-white mx-4">
+              <h6 class="text-uppercase item-activities-text-label item-activities-text-label-camping">camping</h6>
+              <h5>TOPIC: TRAVELING</h5>
+              <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora
+                torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                lobortis.</p>
+              <p class="item-activities-text-time">MAY 30, 2022</p>
             </div>
-            <div class="item">
-              <img src="./imgs/hugo-meeting.png" alt="">
-              <div class="item-activities-text text-white mx-4">
-                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-extra">extra activities</h6>
-                <h5>TOPIC: TRAVELING</h5>
-                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
-                <p class="item-activities-text-time">MAY 30, 2022</p>
-              </div>
+          </div>
+          <div class="item">
+            <img src="./imgs/hugo-meeting.png" alt="">
+            <div class="item-activities-text text-white mx-4">
+              <h6 class="text-uppercase item-activities-text-label item-activities-text-label-extra">extra activities
+              </h6>
+              <h5>TOPIC: TRAVELING</h5>
+              <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora
+                torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                lobortis.</p>
+              <p class="item-activities-text-time">MAY 30, 2022</p>
             </div>
-            <div class="item">
-              <img src="./imgs//hugo-meeting.png" alt="">
-              <div class="item-activities-text text-white mx-4">
-                <h6 class="text-uppercase item-activities-text-label item-activities-text-label-meeting">meeting</h6>
-                <h5>TOPIC: TRAVELING</h5>
-                <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis.</p>
-                <p class="item-activities-text-time">MAY 30, 2022</p>
-              </div>
+          </div>
+          <div class="item">
+            <img src="./imgs//hugo-meeting.png" alt="">
+            <div class="item-activities-text text-white mx-4">
+              <h6 class="text-uppercase item-activities-text-label item-activities-text-label-meeting">meeting</h6>
+              <h5>TOPIC: TRAVELING</h5>
+              <p class="item-activities-text-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+                vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora
+                torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum
+                lobortis.</p>
+              <p class="item-activities-text-time">MAY 30, 2022</p>
             </div>
+          </div>
         </div>
-      <div class="see-more d-flex justify-content-center">
-        <a class="" href="">SEE MORE</a>
+        <div class="see-more d-flex justify-content-center">
+          <a class="" href="">SEE MORE</a>
+        </div>
       </div>
+    </div>
   </div>
-</div>
-</div>
-<link rel="stylesheet" href="./activities.css" />
+  <link rel="stylesheet" href="./activities.css" />
   <script src="./Teams/teams.js"></script>
-  
+
   <!-- activities end -->
 
   <!-- Blogs start -->
@@ -635,9 +668,6 @@
   <link rel="stylesheet" href="../footer.css" />
   <script src="./footer.js"></script>
   <!-- Footer end -->
-
-
-  
 
 </body>
 
