--- a/Teams/teams_HC.html
+++ b/Teams/teams_HC.html
@@ -106,29 +106,29 @@
           <span class="d-flex justify-content-center mt-3"><i class="fa-regular fa-clock"></i>19:30 - Every Friday<i class="fa-solid fa-location-dot ms-5"></i>44 Ho Tuong, Thanh Khe, Da Nang</span>
         </div>
         <div class="row team-activities justify-content-between mt-5">
-          <div class="team-activities-element d-flex justify-content-center align-items-end">
-            <img src="./teams-img/HC/team-meeting HC.png" alt="">
+          <div class="team-activities-element d-flex justify-content-center align-items-end col-3 px-3">
+            <img src="./teams-img/HC/team-meeting HC.png" alt="" class="w-100">
             <div class="activities-title">
               <h4 class="text-center mb-3 activities-title-main">Team meeting</h4>
               <p class="mb-3 activities-title-sub">Weekly meeting every Friday evening</p>
             </div>
           </div>
-          <div class="team-activities-element d-flex justify-content-center align-items-end">
-            <img src="./teams-img/HC/HC-camping.png" alt="">
+          <div class="team-activities-element d-flex justify-content-center align-items-end col-3 px-3">
+            <img src="./teams-img/HC/HC-camping.png" alt="" class="w-100">
             <div class="activities-title">
               <h4 class="text-center mb-3 activities-title-main">Team Camping</h4>
               <p class="mb-3 activities-title-sub">Weekly meeting every Friday evening</p>
             </div>
           </div>
-          <div class="team-activities-element d-flex justify-content-center align-items-end">
-            <img src="./teams-img/HC/Extra-act.png" alt="">
+          <div class="team-activities-element d-flex justify-content-center align-items-end col-3 px-3">
+            <img src="./teams-img/HC/Extra-act.png" alt="" class="w-100">
             <div class="activities-title">
               <h4 class="text-center mb-3 activities-title-main">Extra Activities</h4>
               <p class="mb-3 activities-title-sub">Weekly meeting every Friday evening</p>
             </div>
           </div>
-          <div class="team-activities-element d-flex justify-content-center align-items-end">
-            <img src="./teams-img/HC/HC-Sharing.png" alt="">
+          <div class="team-activities-element d-flex justify-content-center align-items-end col-3 px-3">
+            <img src="./teams-img/HC/HC-Sharing.png" alt="" class="w-100">
             <div class="activities-title">
               <h4 class="text-center mb-3 activities-title-main">Sharing</h4>
               <p class="mb-3 activities-title-sub">Weekly meeting every Friday evening</p>
