--- a/Blogs/blogs.html
+++ b/Blogs/blogs.html
@@ -102,7 +102,7 @@
         <img src="./blog-img/main-pic-blogs.png" alt="" class="p-0 img">
     </div>
   <link rel="stylesheet" href="../header.css">
-  <link rel="stylesheet" href="./blogs.css">
+  <link rel="stylesheet" href="./blogs-page.css">
     <!-- header end -->
 
     <!-- Hugo blog start -->
@@ -117,11 +117,8 @@
         </div>
     </div>
 
-    <div id="blogs" class="blogs">
+    <div id="blogs" class="blogs blogs-page">
       <div class="container">
-        <div class="row text-center">
-          <p class="fw-bold blogs-title">BLOGS</p>
-        </div>
         <div id="carouselExampleControls" class="carousel slide justify-content-between" data-ride="carousel">
           <div class="carousel-inner blogs-inner">
             <div class="carousel-item active">
@@ -351,17 +348,32 @@
             <img src="./blog-img/Hugo’s Confessions.png" alt="hugo-confession">
           </div>
           <div class="hugo-confession-content mt-5">
-            <div class="owl-carousel owl-theme">
+            <div class="owl-carousel owl-theme position-relative">
               <div class="item">
-                <img src="./blog-img/hugo-academic-1.png" alt="">
+                <img src="./blog-img/confession-symbol.png" alt="" class="mt-3">
+                <p class="mt-2 item-sub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id eget risus, a semper risus dolor euismod proin. Elit tincidunt est urna, justo, et posuere condimentum. In purus faucibus dignissim sed facilisis enim, in. At ut nec lobortis aenean mi purus leo, sed. Et risus neque vulputate quis sed interdum. Neque congue adipiscing leo quis dolor, at et lobortis. Id enim pharetra proin in natoque. Faucibus vulputate malesuada venenatis tincidunt molestie facilisi.
+                  Mi tellus lectus amet amet, molestie at mattis tincidunt senectus. Libero ac ut.</p>
+                <span class="cfs">
+                  #cfs number
+                </span> 
               </div>
               <div class="item">
-                <img src="./blog-img/hugo-academic-1.png" alt="">
+                <img src="./blog-img/confession-symbol.png" alt="" class="mt-3">
+                <p class="mt-2 item-sub">ádsad dolor sit amet, consectetur adipiscing elit. Cras id eget risus, a semper risus dolor euismod proin. Elit tincidunt est urna, justo, et posuere condimentum. In purus faucibus dignissim sed facilisis enim, in. At ut nec lobortis aenean mi purus leo, sed. Et risus neque vulputate quis sed interdum. Neque congue adipiscing leo quis dolor, at et lobortis. Id enim pharetra proin in natoque. Faucibus vulputate malesuada venenatis tincidunt molestie facilisi.
+                  Mi tellus lectus amet amet, molestie at mattis tincidunt senectus. Libero ac ut.</p> 
+                  <span class="cfs">
+                    #cfs number
+                  </span>
               </div>
               <div class="item">
-                <img src="./blog-img/hugo-academic-1.png" alt="">
+                <img src="./blog-img/confession-symbol.png" alt="" class="mt-3">
+                <p class="mt-2 item-sub">Ládsdsdsdsdsit amet, consectetur adipiscing elit. Cras id eget risus, a semper risus dolor euismod proin. Elit tincidunt est urna, justo, et posuere condimentum. In purus faucibus dignissim sed facilisis enim, in. At ut nec lobortis aenean mi purus leo, sed. Et risus neque vulputate quis sed interdum. Neque congue adipiscing leo quis dolor, at et lobortis. Id enim pharetra proin in natoque. Faucibus vulputate malesuada venenatis tincidunt molestie facilisi.
+                  Mi tellus lectus amet amet, molestie at mattis tincidunt senectus. Libero ac ut.</p>
+                <span class="cfs">
+                  #cfs number
+                </span>
               </div>
-          </div>
+            </div>
           </div>
         </div>
     </div>
