--- a/AboutUs/aboutUs.html
+++ b/AboutUs/aboutUs.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -21,6 +25,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -29,6 +34,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Hugo English Club</title>
+
     <!-- Carousel -->
     <link
       rel="stylesheet"
@@ -44,6 +50,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
       integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
@@ -56,7 +63,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <link rel="stylesheet" href="./aboutUs.css" />
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script
@@ -74,6 +80,11 @@
     <script src="https://accounts.google.com/gsi/client"></script>
     <script src="/sheet-api/initialize.js"></script>
     <!-- Google API end -->
+
+    <!-- JSZip start -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <!-- JSZip end -->
+    <link rel="stylesheet" href="./aboutUs.css" />
   </head>
   <body>
     <!-- Header start -->
@@ -241,13 +252,7 @@
             lobortis.
           </p>
         </div>
-        <div id="staffArea" class="row about-member mt-4">
-          <div class="col-lg-3">
-            <img src="./aboutImg/mem-pic.png" alt="" />
-            <p class="mem-name mb-0">Tran Quy The</p>
-            <p class="mem-title">Head of Social Media</p>
-          </div>
-        </div>
+        <div id="staffArea" class="row about-member mt-4"></div>
       </div>
       <div class="hugo-in-us">
         <div class="hugo-in-us-line"></div>
@@ -280,5 +285,125 @@
       </div>
     </div>
     <script src="/AboutUs/abouUs.js" type="text/babel"></script>
+    <!-- Footer start -->
+    <div class="footer text-white" id="footer">
+      <div class="container w-100 h-auto mt-5 p-md-0">
+        <div class="row footer-items justify-content-between">
+          <div
+            class="col-lg-3 col-sm-12 px-3 footer-item-logo-title text-lg-start text-center"
+          >
+            <div class="row mb-3">
+              <div class="col-lg-2">
+                <img src="../imgs/hugoIcon.png" alt="" />
+              </div>
+              <div class="col-lg-10 d-lg-flex flex-wrap">
+                <div class="text-uppercase fw-bold mt-3 mt-lg-0 hugo-name">
+                  hugo english club <br />
+                </div>
+                <span class="text-uppercase">light up your fire</span>
+              </div>
+            </div>
+            <div class="row footer-item-content">
+              <p>
+                This website is a product of Hugo IT club and part of the
+                HUGOVERSARY project to celebrate the 15th birthday of Hugo
+                English Club. This website is to store, update and promote the
+                activities and events of Hugo Club up to the present time.
+              </p>
+            </div>
+          </div>
+          <div
+            class="col-lg-2 col-sm-12 col-md-4 mt-3 mt-lg-0 footer-item px-0 text-lg-start text-center about-us"
+          >
+            <h5 class="text-uppercase mb-0">About us</h5>
+            <p>
+              <a href="" class="text-decoration-none text-white"
+                >About Hugo English Club</a
+              >
+            </p>
+            <p>
+              <a href="" class="text-decoration-none text-white"
+                >About HUGOVERSARY</a
+              >
+            </p>
+          </div>
+          <div
+            class="col-lg-3 col-sm-12 col-md-4 mt-3 mt-lg-0 footer-item ps-lg-4 p-md-0 text-lg-start text-center"
+          >
+            <h5 class="text-uppercase mb-0 footer-contact">contact</h5>
+            <p>
+              <a
+                href="mailto:hugoclub.dut@gmail.com"
+                class="text-white text-decoration-none"
+                >Email: hugoclub.dut@gmail.com</a
+              >
+            </p>
+            <p>
+              <a href="tel:+00 151515" class="text-white text-decoration-none"
+                >Phone number: +84 981720874</a
+              >
+            </p>
+            <div class="row mt-3">
+              <ul
+                class="list-inline d-flex text-lg-start justify-content-center justify-content-lg-start"
+              >
+                <li>
+                  <a
+                    href="https://www.facebook.com/HUGOClub/"
+                    target="_blank"
+                    class="list-inline-item me-2 d-flex justify-content-center align-items-center text-decoration-none"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.instagram.com/hugoenglishclub/"
+                    target="_blank"
+                    class="list-inline-item me-2 d-flex justify-content-center align-items-center text-decoration-none"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.youtube.com/channel/UCmhyu5rOUvECgvA4YEEKnxg"
+                    target="_blank"
+                    class="list-inline-item me-2 d-flex justify-content-center align-items-center text-decoration-none"
+                    ><i class="fa-brands fa-youtube"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div
+            class="col-lg-2 col-sm-12 col-md-4 mt-3 mt-lg-0 footer-item footer-language text-lg-start text-center"
+          >
+            <h5 class="text-uppercase mb-0">Language</h5>
+            <div class="lang-menu">
+              <div class="selected-lang d-flex align-items-center">
+                <img src="../imgs/united-states.png" alt="" class="me-2" />
+                <p class="mb-0">English</p>
+                <i class="fa-sharp fa-solid fa-caret-down"></i>
+              </div>
+              <ul class="lang-selection">
+                <li value="en" class="d-flex align-items-center lang-option">
+                  <img src="../imgs/united-states.png" alt="" class="me-2" />
+                  <p class="mb-0">English</p>
+                </li>
+                <!-- <li value="vi" class="d-flex align-items-center lang-option">
+                <img src="../imgs/vietnam.png" alt="" class="me-2">
+                <p class="mb-0">Vietnamese</p>
+              </li> -->
+              </ul>
+            </div>
+          </div>
+          <div class="row text-center footer-copyright my-4">
+            <p>Copyright © 2022 HUGOENGLISHCLUB</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <link rel="stylesheet" href="../footer.css" />
+    <script src="../footer.js"></script>
+    <!-- Footer end -->
   </body>
 </html>
