--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         class="navbar navbar-expand-lg justify-content-between fixed-top bg-nav"
       >
         <div class="container">
-          <a href="#" class="navbar-brand">
+          <a href="./index.html" class="navbar-brand">
             <img src="./imgs/hugoIcon.png" alt="" />
           </a>
           <p class="text-white text-uppercase mb-0 icon-text">
@@ -128,15 +128,15 @@
                 >
               </li>
               <li class="nav-item dropdown nav-element nav-teams">
-                <a
+                <div
                   class="nav-link dropdown-toggle text-white nav-teams-element"
-                  href="#teams-introduce"
+                  href=""
                   role="button"
-                  data-bs-toggle="dropdown"
+                  data-bs-toggle=""
                   aria-expanded="false"
                 >
                   TEAMS
-                </a>
+                </div>
                 <ul class="dropdown-menu teams-elements">
                   <li>
                     <a class="dropdown-item text-white teams-name" href="#"
@@ -170,15 +170,15 @@
                 </ul>
               </li>
               <li class="nav-item dropdown nav-element nav-activities p-0">
-                <a
-                  class="nav-link dropdown-toggle text-white"
-                  href="activities"
+                <div
+                  class="nav-link dropdown-toggle text-white nav-teams-element"
+                  href=""
                   role="button"
-                  data-bs-toggle="dropdown"
+                  data-bs-toggle=""
                   aria-expanded="false"
                 >
                   ACTIVITIES
-                </a>
+                </div>
                 <ul class="dropdown-menu mt-0 activities-elements">
                   <li>
                     <a class="dropdown-item text-white activities-name" href="#"
@@ -196,10 +196,14 @@
                 </ul>
               </li>
               <li class="nav-item nav-element">
-                <a class="nav-link text-white nav-blogs" href="#blogs">BLOGS</a>
+                <a
+                  class="nav-link text-white nav-blogs"
+                  href="./Blogs/blogs.html"
+                  >BLOGS</a
+                >
               </li>
               <li class="nav-item nav-element">
-                <a class="nav-link text-white" href="#club-introduction"
+                <a class="nav-link text-white" href="./AboutUs/aboutUs.html"
                   >ABOUT US</a
                 >
               </li>
@@ -221,7 +225,7 @@
         class="carousel slide main-slider"
         data-bs-ride="carousel"
       >
-        <div class="carousel-inner">
+        <div id="carousel-inner" class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="5000">
             <img src="./imgs/slider_1.png" class="d-block w-100" alt="..." />
           </div>
@@ -253,6 +257,7 @@
       </div>
     </div>
     <link rel="stylesheet" href="./header.css" />
+    <script src="./slider.js" type="text/babel"></script>
     <!-- Header end -->
 
     <!-- Club-introduction start-->
@@ -516,6 +521,9 @@
               </a>
             </div>
           </div>
+        </div>
+        <div class="see-more d-flex justify-content-center">
+          <a class="" href="">SEE MORE</a>
         </div>
       </div>
     </div>
